PROD/redis-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  labels: 
    app: redis
    role: leader
    tier: backend
  spec: 
    ports:
    - port: 6379
      targetPort: 6379
    selector: 
      app: redis
      role: leader
      tier: backend
