PROD/devops303-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: devops-303
spec:
  rules:
    - host: devops-303.laura
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-303
                port:
                  number: 80
